--- a/app.json
+++ b/app.json
@@ -1,42 +1,56 @@
 {
   "expo": {
-      "name": "3d-video-player",
-      "slug": "3d-video-player",
-      "version": "1.0.0",
-      "orientation": "portrait",
-      "icon": "./assets/images/icon.png",
-      "scheme": "myapp",
-      "userInterfaceStyle": "automatic",
-      "newArchEnabled": true,
-      "ios": {
-          "supportsTablet": true
-      },
-      "android": {
-          "adaptiveIcon": {
-              "foregroundImage": "./assets/images/adaptive-icon.png",
-              "backgroundColor": "#ffffff"
-          }
-      },
-      "web": {
-          "bundler": "metro",
-          "output": "static",
-          "favicon": "./assets/images/favicon.png"
-      },
-      "plugins": [
-          "expo-router",
-          [
-              "expo-splash-screen",
-              {
-                  "image": "./assets/images/splash-icon.png",
-                  "imageWidth": 200,
-                  "resizeMode": "contain",
-                  "backgroundColor": "#ffffff"
-              }
-          ],
-          "expo-dev-client"  
-      ],
-      "experiments": {
-          "typedRoutes": true
+    "name": "3d-video-player",
+    "slug": "3d-video-player",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "myapp",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.x3dvideoplayer",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
       }
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.anonymous.x3dvideoplayer",
+      "permissions": ["READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "READ_MEDIA_VIDEO", "READ_MEDIA_IMAGES", "READ_MEDIA_AUDIO"]
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
+        }
+      ],
+      "expo-dev-client"
+    ],
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "1d6b605e-0d24-4c66-81d2-8cebeb048305"
+      }
+    }
   }
 }
