--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "bundleIdentifier": "com.anonymous.x3dvideoplayer",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "requireFullScreen": true
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +22,8 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.anonymous.x3dvideoplayer",
-      "permissions": ["READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "READ_MEDIA_VIDEO", "READ_MEDIA_IMAGES", "READ_MEDIA_AUDIO"]
+      "permissions": ["READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE", "READ_MEDIA_VIDEO", "READ_MEDIA_IMAGES", "READ_MEDIA_AUDIO"],
+      "requireFullScreen": true
     },
     "web": {
       "bundler": "metro",
@@ -39,7 +41,13 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-dev-client"
+      "expo-dev-client",
+      [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "LANDSCAPE"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
