--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babylonjs/core": "^7.51.0",
     "@babylonjs/react-native": "^1.8.6",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
@@ -32,12 +33,14 @@
     "expo-linking": "~7.0.5",
     "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.17",
+    "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-video": "^2.0.5",
     "expo-web-browser": "~14.0.2",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -45,10 +48,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.10.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-screen-orientation": "~8.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
