--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babylonjs/core": "^7.51.0",
     "@babylonjs/react-native": "^1.8.6",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/slider": "^4.5.6",
     "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
@@ -25,6 +26,7 @@
     "expo": "~52.0.37",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
+    "expo-brightness": "^13.0.3",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
     "expo-document-picker": "~13.0.3",
@@ -48,9 +50,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-sliders": "^2.0.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.2",
+    "react-native-video-player": "^0.16.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -58,6 +62,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-video-player": "^0.10.7",
     "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
